--- a/chatrooms/package.json
+++ b/chatrooms/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.9.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "socket.io": "^2.3.0"
   }
 }
